--- a/example/pubspec.yaml
+++ b/example/pubspec.yaml
@@ -7,8 +7,7 @@ environment:
   sdk: ^3.10.0
 
 dependencies:
-  smart_cache_manager:
-    path: "/Users/welcome/Desktop/Personal/smart_cache_manager"
+  smart_cache_manager: ^1.0.1
   flutter:
     sdk: flutter
 
