--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,7 +1,8 @@
 name: smart_cache_manager
-description: "A new Flutter package project."
-version: 0.0.1
-homepage:
+description: A smart, persistent caching library for Flutter. Supports LRU & FIFO eviction, auto-expiry (TTL), and flexible storage (Disk or RAM).
+version: 1.0.2
+homepage: https://github.com/Aswanthds/smart_cache_manager
+issue_tracker: https://github.com/Aswanthds/smart_cache_manager/issues
 
 environment:
   sdk: ^3.10.0
@@ -16,6 +17,8 @@ dev_dependencies:
   flutter_test:
     sdk: flutter
   flutter_lints: ^6.0.0
+  plugin_platform_interface: ^2.1.8
+  path_provider_platform_interface: ^2.1.2
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
