--- a/example/pubspec.yaml
+++ b/example/pubspec.yaml
@@ -7,7 +7,8 @@ environment:
   sdk: ^3.10.0
 
 dependencies:
-  smart_cache_manager: ^1.0.1
+  smart_cache_manager:
+    path: "/Users/welcome/Desktop/Personal/smart_cache_manager"
   flutter:
     sdk: flutter
 
