feat: Update smart_cache_manager dependency to git source and enhance example with persistent caching, additional data, and pretty JSON logging.

--- a/example/pubspec.yaml
+++ b/example/pubspec.yaml
@@ -8,7 +8,7 @@ environment:
 
 dependencies:
   smart_cache_manager:
-    path: "/Users/welcome/Desktop/Personal/smart_cache_manager"
+    git: "https://github.com/Aswanthds/smart_cache_manager"
   flutter:
     sdk: flutter
 
